Fix: query usa auth_user_id invece di id in promotions.html

--- a/public/promotions.html
+++ b/public/promotions.html
@@ -1327,7 +1327,7 @@
                 const { data: userData, error } = await window.supabaseClient
                     .from('users')
                     .select('*')
-                    .eq('id', currentUser.id)
+                    .eq('auth_user_id', currentUser.id)
                     .maybeSingle();
                 
                 console.log('User query result:', { userData, error });
