--- a/public/page-builder.html
+++ b/public/page-builder.html
@@ -1697,32 +1697,30 @@
                     throw new Error('Devi essere loggato per caricare immagini');
                 }
 
-                // Generate unique filename
-                const fileExt = file.name.split('.').pop();
-                const fileName = `${session.user.id}/page-${type}-${Date.now()}.${fileExt}`;
+                // Upload to Vercel Blob via API
+                const formData = new FormData();
+                formData.append('file', file);
+                formData.append('type', type); // hero/about
+                formData.append('userId', session.user.id);
 
-                // Upload to Supabase Storage
-                const { data, error } = await supabaseClient.storage
-                    .from('organization-images')
-                    .upload(fileName, file, {
-                        cacheControl: '3600',
-                        upsert: false
-                    });
+                const response = await fetch('/api/upload-org', {
+                    method: 'POST',
+                    body: formData
+                });
 
-                if (error) throw error;
+                if (!response.ok) {
+                    const error = await response.json();
+                    throw new Error(error.error || 'Upload failed');
+                }
 
-                // Get public URL
-                const { data: publicUrlData } = supabaseClient.storage
-                    .from('organization-images')
-                    .getPublicUrl(fileName);
-
-                wizardData.images[type] = publicUrlData.publicUrl;
+                const result = await response.json();
+                wizardData.images[type] = result.url;
                 
                 // Show preview
                 uploadDiv.classList.add('has-image');
-                uploadDiv.innerHTML = `<img src="${publicUrlData.publicUrl}" class="wizard-image-preview" alt="${type} preview">`;
+                uploadDiv.innerHTML = `<img src="${result.url}" class="wizard-image-preview" alt="${type} preview">`;
 
-                console.log(`✅ ${type} image uploaded:`, publicUrlData.publicUrl);
+                console.log(`✅ ${type} image uploaded to Vercel Blob:`, result.url);
 
             } catch (error) {
                 console.error('Error uploading image:', error);
@@ -1736,7 +1734,7 @@
                     <div class="upload-placeholder">
                         <i class="fas fa-cloud-upload-alt"></i>
                         <div>Clicca per caricare${type === 'about' ? ' (opzionale)' : ' immagine principale'}</div>
-                        <small>JPG, PNG, max 5MB</small>
+                        <small>JPG, PNG, max 10MB</small>
                     </div>
                 `;
             }
